--- a/qplot.ui
+++ b/qplot.ui
@@ -25,6 +25,12 @@
        <enum>Qt::Horizontal</enum>
       </property>
       <widget class="QFrame" name="r_frame">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>50</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
        </property>
@@ -38,6 +44,12 @@
        </layout>
       </widget>
       <widget class="QFrame" name="l_fram">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="frameShape">
         <enum>QFrame::StyledPanel</enum>
        </property>
@@ -236,7 +248,7 @@
      <x>0</x>
      <y>0</y>
      <width>686</width>
-     <height>29</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuProject">
