--- a/qplot.ui
+++ b/qplot.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>686</width>
-    <height>582</height>
+    <width>960</width>
+    <height>640</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>qplot</string>
@@ -77,6 +83,9 @@
              </item>
              <item>
               <widget class="QPushButton" name="btn_not_math">
+               <property name="cursor">
+                <cursorShape>PointingHandCursor</cursorShape>
+               </property>
                <property name="text">
                 <string/>
                </property>
@@ -215,6 +224,9 @@
            </item>
            <item>
             <widget class="QPushButton" name="btn_approw">
+             <property name="cursor">
+              <cursorShape>PointingHandCursor</cursorShape>
+             </property>
              <property name="text">
               <string>Approw</string>
              </property>
@@ -227,6 +239,9 @@
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="QPushButton" name="btn_add_func">
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
             <property name="text">
              <string>Add Function</string>
             </property>
@@ -237,6 +252,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="btn_setting">
+            <property name="cursor">
+             <cursorShape>PointingHandCursor</cursorShape>
+            </property>
             <property name="text">
              <string>Settings</string>
             </property>
@@ -261,8 +279,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>686</width>
-     <height>22</height>
+     <width>960</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuProject">
@@ -273,6 +291,7 @@
     <addaction name="actionSave"/>
     <addaction name="actionSave_As"/>
     <addaction name="actionOpen"/>
+    <addaction name="separator"/>
    </widget>
    <addaction name="menuProject"/>
   </widget>
@@ -307,6 +326,11 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionload_python_script">
+   <property name="text">
+    <string>load so/dll</string>
    </property>
   </action>
  </widget>
