--- a/resources.qrc
+++ b/resources.qrc
@@ -3,4 +3,10 @@
         <file>icons/appicon.svg</file>
         <file>icons/pencil.svg</file>
     </qresource>
+    <qresource prefix="/ui_icons">
+        <file>icons/ui/document-new.svg</file>
+        <file>icons/ui/document-open.svg</file>
+        <file>icons/ui/document-save-as.svg</file>
+        <file>icons/ui/document-save.svg</file>
+    </qresource>
 </RCC>
