--- a/editdialog.ui
+++ b/editdialog.ui
@@ -58,23 +58,9 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QSpinBox" name="sb_red">
-         <property name="maximum">
-          <number>255</number>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="sb_green">
-         <property name="maximum">
-          <number>255</number>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QSpinBox" name="sb_blue">
-         <property name="maximum">
-          <number>255</number>
+        <widget class="QPushButton" name="new_graph_color">
+         <property name="text">
+          <string/>
          </property>
         </widget>
        </item>
