--- a/qplot.ui
+++ b/qplot.ui
@@ -23,12 +23,15 @@
    <iconset resource="resources.qrc">
     <normaloff>:/icons/icons/appicon.svg</normaloff>:/icons/icons/appicon.svg</iconset>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <widget class="QSplitter" name="splitter">
       <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+       <enum>Qt::Orientation::Horizontal</enum>
       </property>
       <widget class="QFrame" name="r_frame">
        <property name="sizePolicy">
@@ -38,10 +41,10 @@
         </sizepolicy>
        </property>
        <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
+        <enum>QFrame::Shape::StyledPanel</enum>
        </property>
        <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
+        <enum>QFrame::Shadow::Raised</enum>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
         <item row="0" column="0">
@@ -57,17 +60,24 @@
         </sizepolicy>
        </property>
        <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
+        <enum>QFrame::Shape::StyledPanel</enum>
        </property>
        <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
+        <enum>QFrame::Shadow::Raised</enum>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_5">
         <item>
          <widget class="QWidget" name="main_wdget" native="true">
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QListWidget" name="lv_functions_view"/>
+            <widget class="QListWidget" name="lv_functions_view">
+             <property name="styleSheet">
+              <string notr="true">QListWidget::item:selected
+{
+	stroke-color: black
+}</string>
+             </property>
+            </widget>
            </item>
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout">
@@ -107,35 +117,12 @@
               </widget>
              </item>
              <item>
-              <widget class="QSpinBox" name="sb_red">
-               <property name="maximum">
-                <number>255</number>
+              <widget class="QPushButton" name="new_color">
+               <property name="styleSheet">
+                <string notr="true"/>
                </property>
-               <property name="singleStep">
-                <number>1</number>
-               </property>
-               <property name="value">
-                <number>100</number>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSpinBox" name="sb_green">
-               <property name="maximum">
-                <number>255</number>
-               </property>
-               <property name="value">
-                <number>100</number>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QSpinBox" name="sb_blue">
-               <property name="maximum">
-                <number>255</number>
-               </property>
-               <property name="value">
-                <number>255</number>
+               <property name="text">
+                <string/>
                </property>
               </widget>
              </item>
@@ -280,12 +267,12 @@
      <x>0</x>
      <y>0</y>
      <width>960</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuProject">
     <property name="title">
-     <string>Project</string>
+     <string>Pro&amp;ject</string>
     </property>
     <addaction name="actionCreate"/>
     <addaction name="actionSave"/>
@@ -293,44 +280,79 @@
     <addaction name="actionOpen"/>
     <addaction name="separator"/>
    </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Справка</string>
+    </property>
+    <addaction name="action_Qt"/>
+    <addaction name="action"/>
+    <addaction name="action_2"/>
+   </widget>
    <addaction name="menuProject"/>
+   <addaction name="menu"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionCreate">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/ui_icons/icons/ui/document-new.svg</normaloff>:/ui_icons/icons/ui/document-new.svg</iconset>
+   </property>
    <property name="text">
-    <string>Create</string>
+    <string>&amp;Create</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+N</string>
    </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/ui_icons/icons/ui/document-save.svg</normaloff>:/ui_icons/icons/ui/document-save.svg</iconset>
+   </property>
    <property name="text">
-    <string>Save</string>
+    <string>&amp;Save</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionSave_As">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/ui_icons/icons/ui/document-save-as.svg</normaloff>:/ui_icons/icons/ui/document-save-as.svg</iconset>
+   </property>
    <property name="text">
-    <string>Save As</string>
+    <string>Save &amp;As</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
    </property>
   </action>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/ui_icons/icons/ui/document-open.svg</normaloff>:/ui_icons/icons/ui/document-open.svg</iconset>
+   </property>
    <property name="text">
-    <string>Open</string>
+    <string>&amp;Open</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
    </property>
   </action>
-  <action name="actionload_python_script">
+  <action name="action_Qt">
    <property name="text">
-    <string>load so/dll</string>
+    <string>&amp;About Qt</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>About &amp;Programm</string>
+   </property>
+  </action>
+  <action name="action_2">
+   <property name="text">
+    <string>&amp;Rules create prompts</string>
    </property>
   </action>
  </widget>
